# OpenXcom

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  OpenXcom-Lua.wsp
src/: CMakeLists.txt  OpenXcom.2010.vcxproj  OpenXcom.2010.vcxproj.filters  configure_cmake.bat  fmath.h  lodepng.cpp  main.cpp  md5.cpp  version.h
src/Basescape/: BaseInfoState.cpp  BaseInfoState.h  BaseView.cpp  BaseView.h  BasescapeState.cpp  BasescapeState.h  BuildFacilitiesState.cpp  BuildFacilitiesState.h  CraftArmorState.cpp  CraftArmorState.h  CraftEquipmentLoadState.cpp  CraftEquipmentLoadState.h  CraftEquipmentSaveState.cpp  CraftEquipmentSaveState.h  CraftEquipmentState.cpp  CraftEquipmentState.h  CraftInfoState.cpp  CraftInfoState.h  CraftPilotSelectState.cpp  CraftPilotSelectState.h  CraftPilotsState.cpp  CraftPilotsState.h  CraftSoldiersState.cpp  CraftSoldiersState.h  CraftWeaponsState.cpp  CraftWeaponsState.h  CraftsState.cpp  CraftsState.h  DismantleFacilityState.cpp  DismantleFacilityState.h  GlobalAlienContainmentState.cpp  GlobalAlienContainmentState.h  GlobalManufactureState.cpp  GlobalManufactureState.h  GlobalResearchState.cpp  GlobalResearchState.h  ManageAlienContainmentState.cpp  ManageAlienContainmentState.h  ManufactureDependenciesTreeState.cpp  ManufactureDependenciesTreeState.h  (+73 more)
src/Battlescape/: AIModule.cpp  AbortMissionState.cpp  AbortMissionState.h  ActionMenuState.cpp  AlienInventory.cpp  AlienInventoryState.cpp  AliensCrashState.cpp  AliensCrashState.h  BattlescapeGame.cpp  BattlescapeGame.h  BattlescapeGenerator.cpp  BattlescapeMessage.cpp  BattlescapeMessage.h  BattlescapeState.cpp  BattlescapeState.h  BriefingLightState.cpp  BriefingLightState.h  BriefingState.cpp  BriefingState.h  CannotReequipState.cpp  CannotReequipState.h  CommendationLateState.cpp  CommendationLateState.h  CommendationState.cpp  CommendationState.h  ConfirmEndMissionState.cpp  ConfirmEndMissionState.h  DebriefingState.cpp  DebriefingState.h  ExplosionBState.cpp  ExtendedBattlescapeLinksState.cpp  ExtendedBattlescapeLinksState.h  ExtendedInventoryLinksState.cpp  ExtendedInventoryLinksState.h  InfoboxOKState.cpp  InfoboxState.cpp  InfoboxState.h  Inventory.cpp  Inventory.h  InventoryLoadState.cpp  (+46 more)
src/Codegen/: Codegen.cpp  README.txt
src/Engine/: Action.h  AdlibMusic.cpp  AdlibMusic.h  CatFile.cpp  CatFile.h  Collections.h  CrossPlatform.cpp  CrossPlatform.h  Exception.cpp  FileMap.cpp  FileMap.h  FileRecord.h  FlcPlayer.cpp  FlcPlayer.h  Font.cpp  Font.h  GMCat.cpp  Game.cpp  Game.h  InteractiveSurface.cpp  InteractiveSurface.h  Json.cpp  Json.h  Language.cpp  Language.h  Logger.cpp  Logger.h  ModInfo.cpp  ModInfo.h  Music.h  OpenGL.cpp  OpenGL.h  OptionInfo.h  Options.cpp  Options.h  Options.inc.h  Palette.cpp  Palette.h  RNG.cpp  RNG.h  (+25 more)
src/Entity/: ComponentConcept.h
src/Geoscape/: AlienBaseState.cpp  AlienBaseState.h  AllocatePsiTrainingState.cpp  AllocatePsiTrainingState.h  AllocateTrainingState.cpp  AllocateTrainingState.h  BaseDefenseState.cpp  BaseDefenseState.h  BaseDestroyedState.cpp  BaseDestroyedState.h  BaseNameState.cpp  BaseNameState.h  BuildNewBaseState.cpp  BuildNewBaseState.h  ConfirmCydoniaState.cpp  ConfirmCydoniaState.h  ConfirmDestinationState.cpp  ConfirmDestinationState.h  ConfirmLandingState.cpp  ConfirmLandingState.h  ConfirmNewBaseState.cpp  ConfirmNewBaseState.h  Cord.h  CraftErrorState.cpp  CraftErrorState.h  CraftNotEnoughPilotsState.cpp  CraftNotEnoughPilotsState.h  CraftPatrolState.cpp  CraftPatrolState.h  DogfightErrorState.cpp  DogfightErrorState.h  DogfightExperienceState.cpp  DogfightExperienceState.h  DogfightState.cpp  DogfightState.h  ExtendedGeoscapeLinksState.cpp  ExtendedGeoscapeLinksState.h  FundingState.cpp  FundingState.h  GeoscapeCraftState.cpp  (+56 more)
src/Inspector/: CustomPropertyGrid.cpp  CustomPropertyGrid.h  EntityPanel.cpp  EntityPanel.h  Inspector.cpp  Inspector.h  InspectorApp.cpp  InspectorApp.h  InspectorFrame.cpp  InspectorFrame.h  TypePropertyMapping.cpp  TypePropertyMapping.h  WxInclude.h
src/Interface/: ArrowButton.cpp  ArrowButton.h  Bar.cpp  Bar.h  BattlescapeButton.cpp  BattlescapeButton.h  ComboBox.cpp  ComboBox.h  Cursor.cpp  Cursor.h  FpsCounter.cpp  FpsCounter.h  Frame.cpp  Frame.h  ImageButton.cpp  ImageButton.h  NumberText.cpp  NumberText.h  ProgressBar.cpp  ProgressBar.h  ScrollBar.cpp  ScrollBar.h  Slider.cpp  Slider.h  Text.cpp  Text.h  TextButton.cpp  TextButton.h  TextEdit.cpp  TextEdit.h  TextList.cpp  TextList.h  ToggleTextButton.cpp  ToggleTextButton.h  Window.cpp  Window.h
src/Lua/: BaseScript.cpp  BaseScript.h  BasescapeScript.cpp  BasescapeScript.h  BattlescapeScript.cpp  BattlescapeScript.h  GameScript.cpp  GameScript.h  GeoscapeScript.cpp  GeoscapeScript.h  LuaApi.cpp  LuaApi.h  LuaArg.cpp  LuaArg.h  LuaContainer.h  LuaDispatch.cpp  LuaDispatch.h  LuaFunction.h  LuaHelpers.cpp  LuaHelpers.h  LuaMod.cpp  LuaMod.h  LuaProperty.h  LuaState.cpp  LuaState.h  SoldierScript.cpp  SoldierScript.h  StateScript.cpp  StateScript.h  UIScript.cpp  UIScript.h
src/Menu/: AbandonGameState.cpp  AbandonGameState.h  ConfirmLoadState.cpp  ConfirmLoadState.h  CutsceneState.cpp  DeleteGameState.cpp  DeleteGameState.h  ErrorMessageState.cpp  ErrorMessageState.h  ListGamesState.cpp  ListGamesState.h  ListLoadOriginalState.cpp  ListLoadOriginalState.h  ListLoadState.cpp  ListSaveState.cpp  LoadGameState.cpp  LoadGameState.h  MainMenuState.cpp  MainMenuState.h  ModConfirmExtendedState.cpp  ModConfirmExtendedState.h  ModListState.cpp  ModListState.h  NewBattleState.cpp  NewBattleState.h  NewGameState.cpp  NewGameState.h  NotesState.cpp  NotesState.h  OptionsAdvancedState.cpp  OptionsAdvancedState.h  OptionsAudioState.cpp  OptionsBaseState.cpp  OptionsBaseState.h  OptionsBattlescapeState.cpp  OptionsBattlescapeState.h  OptionsConfirmState.cpp  OptionsConfirmState.h  OptionsControlsState.cpp  OptionsControlsState.h  (+23 more)
src/Mod/: AlienDeployment.cpp  AlienRace.cpp  Armor.cpp  Armor.h  ExtraSounds.cpp  ExtraSounds.h  ExtraSprites.cpp  ExtraSprites.h  LoadYaml.h  MapData.cpp  MapData.h  MapDataSet.cpp  MapDataSet.h  MapScript.cpp  MapScript.h  (+26 more)
(+158 files in other folders)
